src/main/resources/static/css/main.css
@import url('https://fonts.googleapis.com/css?family=Average+Sans|Inconsolata');

body {
    background-color: #2A2B30;
    color: #D3D1CF;
    font-family: "Average Sans", sans-serif;
}

input[type="text"] {
    font-family: "Inconsolata", sans-serif;
    background-color: #18191E;
    color: #D3D1CF;
    border: 0;
    border-top: 1px solid #76938D;
}

#output {
    overflow-y: scroll;
    position: fixed;
    left: 0px;
    top: 0;
    height: 87%;
    width: 100%;
    white-space: pre-line;
    font-size: 15px;
    padding-left: 25px;
}

.query, .queryResults {
    width: fit-content;
    max-width: 60%;
}

#output .query {
    border-left: 15px solid #8FC0A9;
    padding: 3px 0 3px 10px;
    margin-top: 20px;
    margin-bottom: 7px;
    border-radius: 6px;
    font-family: "Inconsolata", sans-serif;
}

#console {
    position: fixed;
    padding-left: 25px;
    bottom: 0;
    left: 0px;
    width: 100%;
    height: 10%;
    outline: none;
}

#pushSide{
    position: absolute;
    right: 5px;
}

#drawer {
    position: absolute;
    right: 10px;
    width: 300px;
    /*border: 3px solid #73AD21;*/
    padding: 10px;
    height: 60%;
    overflow-y: scroll;
}

